Notification Page Strictly Mobile Responsive

--- a/notification.html
+++ b/notification.html
@@ -425,13 +425,13 @@ nav img {
 
 				</div>
 				<div class="p-2 bd-highlight navli">
-					<a href="#" ><img src="images/help.png"></a>
+					<a href="#" ><img src="https://res.cloudinary.com/ros4eva/image/upload/v1570747848/help_bv586q.png"></a>
 				</div>
 				<div class="p-2 bd-highlight navli">
-					<a href="#" ><img src="images/alarm.png"></a>
+					<a href="#" ><img src="https://res.cloudinary.com/ros4eva/image/upload/v1570747848/alarm_nqoo8i.png"></a>
 				</div>
 				<div class="p-2 bd-highlight navli">
-					<a href="#" ><img src="images/notification.png"></a>
+					<a href="#" ><img src="https://res.cloudinary.com/ros4eva/image/upload/v1570747847/notification_lipoc8.png"></a>
 				</div>
 				<div class="p-2 bd-highlight">
 					<a href="#" class="user"><b >PN</b></a>
@@ -442,7 +442,7 @@ nav img {
 		<div class="notification-box">
 			<div class="d-flex bd-highlight">
 				<div class="p-2 flex-shrink-1 bd-highlight">
-					<img src="images/vector.png">
+					<img src="https://res.cloudinary.com/ros4eva/image/upload/v1570747847/Vector_c4lyp5.png">
 				</div>
 			  	<div class="p-2 w-100 bd-highlight">
 			  		<b>A new invoice was created</b><br>
@@ -456,7 +456,7 @@ nav img {
 		<div class="notification-box">
 			<div class="d-flex bd-highlight">
 				<div class="p-2 flex-shrink-1 bd-highlight">
-					<img src="images/vector3.png">
+					<img src="https://res.cloudinary.com/ros4eva/image/upload/v1570747847/Vector3_gicch8.png">
 				</div>
 			  	<div class="p-2 w-100 bd-highlight">
 			  		<b>A new invoice was created</b><br>
@@ -470,7 +470,7 @@ nav img {
 		<div class="notification-box">
 			<div class="d-flex bd-highlight">
 				<div class="p-2 flex-shrink-1 bd-highlight">
-					<img src="images/vector.png">
+					<img src="https://res.cloudinary.com/ros4eva/image/upload/v1570747847/Vector_c4lyp5.png">
 				</div>
 			  	<div class="p-2 w-100 bd-highlight">
 			  		<b>A new invoice was created</b><br>
@@ -484,7 +484,7 @@ nav img {
 		<div class="notification-box">
 			<div class="d-flex bd-highlight">
 				<div class="p-2 flex-shrink-1 bd-highlight">
-					<img src="images/vector1.png">
+					<img src="https://res.cloudinary.com/ros4eva/image/upload/v1570747847/Vector1_a4qdov.png">
 				</div>
 			  	<div class="p-2 w-100 bd-highlight">
 			  		<b>A new invoice was created</b><br>
@@ -498,7 +498,7 @@ nav img {
 		<div class="notification-box">
 			<div class="d-flex bd-highlight">
 				<div class="p-2 flex-shrink-1 bd-highlight">
-					<img src="images/vector1.png">
+					<img src="https://res.cloudinary.com/ros4eva/image/upload/v1570747847/Vector1_a4qdov.png">
 				</div>
 				<button class="float"><a href="#" class="my-float">+</a></button>
 			  	<div class="p-2 w-100 bd-highlight">
@@ -513,7 +513,7 @@ nav img {
 		<div class="notification-box">
 			<div class="d-flex bd-highlight">
 				<div class="p-2 flex-shrink-1 bd-highlight">
-					<img src="images/vector.png">
+					<img src="https://res.cloudinary.com/ros4eva/image/upload/v1570747847/Vector_c4lyp5.png">
 				</div>
 			  	<div class="p-2 w-100 bd-highlight">
 			  		<b>A new invoice was created</b><br>
